# GTGH-Projects

./: README.md
Miniproject2/: pyproject.toml
Miniproject2/src/agatsas_miniproject2/: app.py
Miniproject2/tests/: test_app.py
miniproject1_Agatsas/: pyproject.toml
miniproject1_Agatsas/src/agatsas_miniproject1/: app.py
miniproject1_Agatsas/tests/: test_app.py
