[project]
name = "agatsas-miniproject2"
version = "0.1.0"
description = ""
authors = [
    {name = "Vagelis",email = "vagosag76@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "langchain (>=0.3.27,<0.4.0)",
    "langgraph (>=0.6.7,<0.7.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "langchain-openai (>=0.3.33,<0.4.0)",
    "wikipedia (>=1.4.0,<2.0.0)",
    "pytest (>=8.4.2,<9.0.0)"
]

[tool.poetry]
packages = [{include = "agatsas_miniproject2", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
